[tool.poetry]
name = "depth_estimation"
version = "0.1.1"
description = "High Resolution Self-Supervised Monocular Depth Estimation"
authors = ["Abdullah AlGhamdi"]
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
